--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ p {
 .project-item img {
     width: 40%; /* Adjust image width */
     height: auto; /* Maintain aspect ratio */
-    max-height: 100px; /* Ensure consistent image size */
+    max-height: 105px; /* Ensure consistent image size */
     border-radius: 10px;
     object-fit: cover; /* Ensure the image fits the area without distortion */
 }
@@ -115,7 +115,6 @@ p {
     width: 55%;
     padding: 10px;
     box-sizing: border-box;
-   
     display: flex;
     flex-direction: column;
     justify-content: center; /* Vertically center the text */
@@ -124,7 +123,7 @@ p {
 
 .project-item:hover {
     transform: translateY(-10px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 10px 20px rgba(255, 255, 0, 0.5); /* Yellow shadow on hover */
 }
 
 /* Contact Form */
@@ -161,11 +160,12 @@ p {
     width: 100%;
     max-width: 500px;
     font-size: 1.1em;
-    transition: background 0.3s;
+    transition: background 0.3s, box-shadow 0.3s;
 }
 
 .contact-form button:hover {
     background: #003f5c; /* Darker blue */
+    box-shadow: 0 0 10px rgba(255, 255, 0, 0.5); /* Yellow shadow on hover */
 }
 
 /* Footer Styles */
